--- a/templates/show_item.html
+++ b/templates/show_item.html
@@ -7,6 +7,14 @@
 
 <body>
     <h1>{{ item.species }}</h1>
+  {% if session.user_id ==item.user_id %}
+  <p><a href="/edit_item/{{ item.id }}">Muokkkaa havaintoa</a>  </p>
+  <p>
+    Olet kirjautunut nimimerkillä {{ session.username }}, käyttäjänumerosi on {{session.user_id}}
+  </p>
+
+  {% endif %}
+
     <p>Määrä: {{item.amount}}</p>
     <p>Havaintopaikka: {{item.place}}</p>
     <p>Kaupunki/kunta: {{item.city}}</p>
