Add remove option

--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -17,12 +17,12 @@
       <input type="text" name="amount" size="8" value="{{item.amount}}"" /> kpl
     </p> 
     <p>
-        Havaintopaikka <br />
-      <input type="text" name="place" value="{{item.place}}" />
+        Kunta <br />
+      <input type="text" name="city" value="{{item.city}}" />
     </p>
     <p>
-        Kaupunki/kunta <br />
-      <input type="text" name="city" value="{{item.city}}" />
+        Havaintopaikka <br />
+      <input type="text" name="place" value="{{item.place}}" />
     </p>
     <p>
         Kuvaus: <br />
