--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -17,12 +17,12 @@
       <input type="text" name="amount" size="8" /> kpl
     </p> 
     <p>
-        Havaintopaikka <br />
-      <input type="text" name="place" />
+        Kunta <br />
+      <input type="text" name="city" />
     </p>
     <p>
-        Kaupunki/kunta <br />
-      <input type="text" name="city" />
+        Havaintopaikka <br />
+      <input type="text" name="place" />
     </p>
     <p>
         Kuvaus: <br />
