--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -10,23 +10,23 @@
   <form action="/create_item" method="post">
     <p>
       Laji: <br />
-      <input type="text" name="species" />
+      <input type="text" name="species" maxlength="20" required />
     </p>
     <p>
         Lukumäärä <br />
-      <input type="text" name="amount" size="8" /> kpl
+      <input type="text" name="amount" size="8" pattern="[1-9][0-9]{0,9}" required /> kpl
     </p> 
     <p>
         Kunta <br />
-      <input type="text" name="city" />
+      <input type="text" name="city" maxlength="20" required />
     </p>
     <p>
         Havaintopaikka <br />
-      <input type="text" name="place" />
+      <input type="text" name="place" maxlength="50" required />
     </p>
     <p>
         Kuvaus: <br />
-    <textarea name="description" rows="8" cols="40"></textarea>
+    <textarea name="description" rows="8" cols="40" maxlength="400"></textarea>
     </p>
     <input type="submit" value="Kirjaa havainto" />
   </form>
