--- a/templates/show_item.html
+++ b/templates/show_item.html
@@ -19,7 +19,7 @@
     <p>Havaintopaikka: {{item.place}}</p>
     <p>Kuvaus/kommentti: {{item.description}}</p>
     <br>
-    <p>Havainnon tekijä: {{item.username}}</p>
+    <p>Havainnon tekijä: <a href="/user/{{ item.user_id }}">{{item.username}}</a></p>
     <br>
     <a href="/">Takaisin etusivulle</a>
 
