--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -10,15 +10,25 @@
   <form action="/create_item" method="post">
     <p>
       Laji: <br />
-      <input type="text" name="species" maxlength="20" required />
+      <input list="species" name="species" required />
+      <datalist id="species">
+        {% for specie in species %}
+          <option value="{{ specie }}"></option>
+        {% endfor %}
+      </datalist>
     </p>
     <p>
         Lukumäärä <br />
       <input type="text" name="amount" size="8" pattern="[1-9][0-9]{0,9}" required /> kpl
     </p> 
     <p>
-        Kunta <br />
-      <input type="text" name="city" maxlength="20" required />
+      Paikkakunta: <br />
+      <input list="municipalities" name="city" required />
+      <datalist id="municipalities">
+        {% for municipality in municipalities %}
+          <option value="{{ municipality }}"></option>
+        {% endfor %}
+      </datalist>
     </p>
     <p>
         Havaintopaikka <br />
