--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -23,7 +23,7 @@
     </p> 
     <p>
       Paikkakunta: <br />
-      <input list="municipalities" name="city" required />
+      <input list="municipalities" name="municipality" required />
       <datalist id="municipalities">
         {% for municipality in municipalities %}
           <option value="{{ municipality }}"></option>
