--- a/templates/show_item.html
+++ b/templates/show_item.html
@@ -15,7 +15,7 @@
   {% endif %}
 
     <p>Määrä: {{item.amount}}</p>
-    <p>Kunta: {{item.city}}</p>
+    <p>Kunta: {{item.municipality}}</p>
     <p>Havaintopaikka: {{item.place}}</p>
     <p>Kuvaus/kommentti: {{item.description}}</p>
     <br>
