--- a/templates/new_item.html
+++ b/templates/new_item.html
@@ -18,6 +18,10 @@
       </datalist>
     </p>
     <p>
+    Päivämäärä: <br />
+    <input type="date" name="date" required>
+    </p>
+    <p>
         Lukumäärä <br />
       <input type="text" name="amount" size="8" pattern="[1-9][0-9]{0,9}" required /> kpl
     </p> 
