--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -10,7 +10,7 @@
   <form action="/update_item" method="post">
     <p>
       Laji: <br />
-      <input list="species" name="species" required />
+      <input list="species" name="species" value="{{ item.species }}" required />
       <datalist id="species">
         {% for specie in species %}
           <option value="{{ specie }}"></option>
@@ -18,12 +18,16 @@
       </datalist>
     </p>
     <p>
+    Päivämäärä: <br />
+    <input type="date" name="date" value="{{ item.date }}" required>
+    </p>
+    <p>
         Lukumäärä <br />
-      <input type="text" name="amount" size="8" pattern="[1-9][0-9]{0,9}" required /> kpl
+      <input type="text" name="amount" size="8" pattern="[1-9][0-9]{0,9}" value="{{item.amount}}" required /> kpl
     </p> 
     <p>
       Paikkakunta: <br />
-      <input list="municipalities" name="municipality" required />
+      <input list="municipalities" name="municipality" value="{{ item.municipality }}" required />
       <datalist id="municipalities">
         {% for municipality in municipalities %}
           <option value="{{ municipality }}"></option>
