--- a/templates/index.html
+++ b/templates/index.html
@@ -1,40 +1,13 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Naakka - lintuhavaintopalvelu</title>
-</head>
+{% block title %}Naakka - lintuhavaintopalvelu{% endblock %}
 
-<body>
-  <h1>Naakka</h1>
+{% block content %}
+<h2>Viimeisimmät lintuhavainnot</h2>
 
-  {% if session.username %}
-  <p>
-    Olet kirjautunut nimimerkillä {{ session.username }}
-    <br>
-  </p>
-  {% endif %}
-
-  <p>
-    <a href="/search_item">Etsi havaintoja</a> |
-
-  {% if session.user_id %}
-    <a href="/new_item">Uusi havainto</a> |
-    <a href="/logout">Kirjaudu ulos</a>
-  {% else %}
-    <a href="/login">Kirjaudu sisään</a> |
-    <a href="/register">Luo käyttäjä</a>
-  {% endif %}
-
-  </p>
-
-  <h2>Viimeisimmät lintuhavainnot</h2>
-  <ul>
-      {% for item in items %}
-      <li><a href="/item/{{ item.id }}">{{ item.species }}</a>, {{ item.amount }}kpl, {{ item.municipality }}</li>
-      {% endfor %}
-  </ul>
-
-</body>
-
-</html>
+<ul>
+  {% for item in items %}
+  <li><a href="/item/{{ item.id }}">{{ item.species }}</a>, {{ item.amount }}kpl, {{ item.municipality }}</li>
+  {% endfor %}
+</ul>
+{% endblock %}
