--- a/templates/register.html
+++ b/templates/register.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Rekisteröinti</title>
-</head>
+{% block title %}Rekisteröityminen{% endblock %}
 
-<body>
+{% block content %}
   <form action="/create" method="post">
     <p>
       Tunnus: <br />
@@ -21,6 +18,4 @@
     </p>
     <input type="submit" value="Luo tunnus" />
   </form>
-</body>
-
-</html>
+{% endblock %}
