--- a/templates/search_item.html
+++ b/templates/search_item.html
@@ -1,19 +1,15 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
 
-<head>
-  <title>Etsi havaintoja</title>
-</head>
+{% block title %}Etsi havaintoja{% endblock %}
 
-<body>
-<h1>Etsi havaintoja</h1>
+{% block content %}
+<h2>Etsi havaintoja</h2>
 <form action="/search_item" method="GET" >
     <p>
         Hakusana: <input type ="text" name="query" value="{{ query }}" >
     </p>
     <input type="submit" value="Hae">
 </form>
-<a href="/">Palaa etusivulle</a>
 
 {% if query %}
 <h2>Tulokset</h2>
@@ -24,7 +20,4 @@
     {% endfor %}
 </ul>
 {% endif %}
-
-</body>
-
-</html>
+{% endblock %}
