--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %}
 
-{% block title %}Kirjautuminen{% endblock %}
+{% block title %}Kirjaudu sisään{% endblock %}
 
 {% block content %}
+<h2>Kirjaudu sisään</h2>
   {% if session.username %}
   <p>
     Olet kirjautunut nimellä {{ session.username }}
