--- a/templates/register.html
+++ b/templates/register.html
@@ -1,8 +1,9 @@
 {% extends "layout.html" %}
 
-{% block title %}Rekisteröityminen{% endblock %}
+{% block title %}Rekisteröidy{% endblock %}
 
 {% block content %}
+<h2>Rekisteröidy</h2>
   <form action="/create" method="post">
     <p>
       Tunnus: <br />
