fix background colour

--- a/static/main.css
+++ b/static/main.css
@@ -2,5 +2,5 @@ body {
   margin: auto;
   max-width: 50em;
   font-family: sans-serif;
-  background-color: lightblue;
+  background-color: rgb(141, 209, 175);
 }
