--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,25 @@
 {% block content %}
 <h2>Viimeisimmät lintuhavainnot</h2>
 
-<ul>
-  {% for item in items %}
-  <li><a href="/item/{{ item.id }}">{{ item.species }}</a>, {{ item.amount }}kpl, {{ item.municipality }}</li>
+{% if grouped %}
+  {% for date, items in grouped.items() %}
+    <h3>{{ date }}</h3>
+    {% if items %}
+      <ul>
+        {% for item in items %}
+          <li>
+            <a href="/item/{{ item.id }}">{{ item.species }}</a>,
+            {{ item.amount }} kpl,
+            {{ item.municipality }}
+          </li>
+        {% endfor %}
+      </ul>
+    {% else %}
+      <p>Ei havaintoja.</p>
+    {% endif %}
   {% endfor %}
-</ul>
+{% else %}
+  <p>Ei havaintoja.</p>
+{% endif %}
+
 {% endblock %}
