--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
-  <a href="/"><h1>Naakka</h1></a>
+  <header>
+    <a href="/">
+      <img src="{{ url_for('static', filename='images/sitelogo.svg') }}" alt="Naakka logo" class="logo">
+    </a>
+  </header>
+
 
   {% if session.username %}
   <p class="user-info">
