--- a/templates/register.html
+++ b/templates/register.html
@@ -4,6 +4,10 @@
 
 {% block content %}
 <h2>Rekisteröidy</h2>
+
+  {% if error %}
+    <div class="error-box">{{ error }}</div>
+  {% endif %}
   <form action="/create" method="post">
     <p>
       Tunnus: <br />
