--- a/templates/info.html
+++ b/templates/info.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h2>Tietoa sovelluksesta</h2>
 
-<p><b>Naakka</b> on lintuhavaintojen kirjaamiseen tarkoitettu sovellus, joka on luotu opiskelijaprojektina Helsingin yliopiston Tietokannat ja web-ohjelmointi -kurssin aikana. 
+<p><b>Naakka</b> on lintuhavaintojen kirjaamiseen ja tarkasteluun tarkoitettu sovellus, joka on luotu opiskelijaprojektina Helsingin yliopiston Tietokannat ja web-ohjelmointi -kurssin aikana. 
     <br><br>
     Sovelluksella voit:</p>
     <ul>
