Sort species.csv + update info page

--- a/templates/info.html
+++ b/templates/info.html
@@ -5,15 +5,21 @@
 {% block content %}
 <h2>Tietoa sovelluksesta</h2>
 
-<p><b>Naakka</b> on lintuhavaintojen kirjaamiseen ja tarkasteluun tarkoitettu sovellus, joka on luotu opiskelijaprojektina Helsingin yliopiston Tietokannat ja web-ohjelmointi -kurssin aikana. 
+<p><b>Naakka</b> on lintuhavaintojen kirjaamiseen ja tarkasteluun tarkoitettu sovellus, joka on luotu 
+    opiskelijaprojektina Helsingin yliopiston Tietokannat ja web-ohjelmointi -kurssin aikana. 
     <br><br>
     Sovelluksella voit:</p>
     <ul>
-    <li>Kirjata rekisteröityneenä käyttäjänä tekemiäsi lintuhavaintoja ja lisätä niihin halutessasi kuvia ja kommentteja jos kaipaat apua esimerkiksi lajin, sukupuolen tai iän määrittelemisessä.</li>
+    <li>Kirjata rekisteröityneenä käyttäjänä tekemiäsi lintuhavaintoja ja lisätä niihin 
+        halutessasi kuvia ja kommentteja jos kaipaat esimerkiksi apua lajin, sukupuolen tai iän 
+        määrittelemisessä tai olet tehnyt jonkin poikkeuksellisen havainnon.</li>
     <li>Kommentoida muiden kirjaamia havaintoja.</li>
     <li>Etsiä havaintoja lajin tai havaintopaikan perusteella.</li>
     </ul>
-    <p>Havaintoja kirjatessa laji valitaan Suomessa tavatuista lintulajeista ja havaintopaikan valinta on rajattu Suomen alueelle.<br><br>
-    Apua lintujen tunnistamiseen löydät internetissä esimerkiksi <a href="https://luontoportti.com/?identification=true&sid=3">Luontoportista</a>.
+    <p>Havaintoja kirjatessa laji valitaan Suomessa tavatuista lintulajeista ja havaintopaikan 
+        valinta on rajattu Suomen alueelle. Jos kuitenkin uskot havainneesi lajin, jota ei ole tallennettu 
+        sovellukseen, voit valita lajin "muu" ja täsmentää havaintosi kuvauskenttään.<br><br>
+    Apua lintujen tunnistamiseen löydät internetissä esimerkiksi 
+    <a href="https://luontoportti.com/?identification=true&sid=3">Luontoportista</a>.
     </p>
 {% endblock %}
