Update info text

--- a/templates/info.html
+++ b/templates/info.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h2>Tietoa sovelluksesta</h2>
 
-<p><b>Naakka</b> on lintuhavaintojen kirjaamiseen ja tarkasteluun tarkoitettu sovellus, joka on luotu 
+<p><b>Naakka</b> on Suomessa tehtyjen lintuhavaintojen kirjaamiseen ja tarkasteluun tarkoitettu sovellus, joka on luotu 
     opiskelijaprojektina Helsingin yliopiston Tietokannat ja web-ohjelmointi -kurssin aikana. 
     <br><br>
     Sovelluksella voit:</p>
@@ -16,7 +16,7 @@
     <li>Kommentoida muiden kirjaamia havaintoja.</li>
     <li>Etsiä havaintoja lajin tai havaintopaikan perusteella.</li>
     </ul>
-    <p>Havaintoja kirjatessa laji valitaan Suomessa tavatuista lintulajeista ja havaintopaikan 
+    <p>Havaintoja kirjatessa laji valitaan Suomessa tavatuista lintulajeista ja havaintokunnan 
         valinta on rajattu Suomen alueelle. Jos kuitenkin uskot havainneesi lajin, jota ei ole tallennettu 
         sovellukseen, voit valita lajin "muu" ja täsmentää havaintosi kuvauskenttään.<br><br>
     Apua lintujen tunnistamiseen löydät internetissä esimerkiksi 
